fixed nav bar white space

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ div {
 }
 html,
 body {
+  text-align: center;
   padding-top: 100px;
   min-height: 100vh;
   margin: 0;
@@ -46,6 +47,8 @@ img {
 
 nav {
   z-index: 1;
+  margin-left: 0px;
+  margin-right: 0px;
   position: absolute;
   top: 0;
   width: 100%;
@@ -221,6 +224,9 @@ tr:hover {
 .wrapper {
   height: 100%;
   font-size: 20px;
+  max-width: 100%;
+  text-align: left;
+  width: 1100px;
 }
 .wrapper h2 {
   font-size: 40px;
